# vkbottle_dishka

./: .gitignore  .mypy.ini  handlers.py  interactors.py  main.py  noxfile.py  providers.py  pyproject.toml  pytest.ini  ruff.toml  vk_dishka.py
.github/workflows/: latest-compatibility.yml  setup.yml
examples/: handlers.py  main.py  providers.py
examples/tests/: common.py  test_handlers.py
src/vkbottle_dishka/: __init__.py  vk_dishka.py
tests/: common.py  conftest.py  test_handlers.py  test_integration.py
